remove footer comment

--- a/index.html
+++ b/index.html
@@ -63,12 +63,8 @@
   <div>
     <h2>Why R?</h2>
     <!--footer>
-    <!-- You can add footers here, and then mouse over them on the grid layout. -->
-
-<pre><code>&lt;p&gt;Is this even a question?&lt;/p&gt;
-</code></pre>
-
-<p></footer--></p>
+    <p>You can add footers here, and then mouse over them on the grid layout.</p>
+</footer-->
 
   </div>
 </section>
